--- a/MyTrade/Views/Admin/DistributedTPSList.cshtml
+++ b/MyTrade/Views/Admin/DistributedTPSList.cshtml
@@ -38,29 +38,7 @@
                                     <label>
                                         Payout No.
                                     </label>
-                                    <select class="form-control" id="PayoutNo" name="PayoutNo">
-                                        <option value="">-Select-</option>
-                                        <option value="1">Payout-1</option>
-                                        <option value="2">Payout-2</option>
-                                        <option value="3">Payout-3</option>
-                                        <option value="4">Payout-4</option>
-                                        <option value="5">Payout-5</option>
-                                        <option value="6">Payout-6</option>
-                                        <option value="7">Payout-7</option>
-                                        <option value="8">Payout-8</option>
-                                        <option value="9">Payout-9</option>
-                                        <option value="10">Payout-10</option>
-                                        <option value="11">Payout-11</option>
-                                        <option value="12">Payout-12</option>
-                                        <option value="13">Payout-13</option>
-                                        <option value="14">Payout-14</option>
-                                        <option value="15">Payout-15</option>
-                                        <option value="16">Payout-16</option>
-                                        <option value="17">Payout-17</option>
-                                        <option value="18">Payout-18</option>
-                                        <option value="19">Payout-19</option>
-                                        <option value="20">Payout-20</option>
-                                    </select>
+                                    @Html.DropDownListFor(m => m.PayoutNo, new SelectList(ViewBag.Payout, "Value", "Text"), "-Select-", new { @class = "form-control" })
                                     <input type="hidden" id="hdf" value="@Model.PayoutNo" />
                                 </div>
                             </div>
