Chnages on TPS and TPP

--- a/MyTrade/Views/AdminReports/TreeForAdmin.cshtml
+++ b/MyTrade/Views/AdminReports/TreeForAdmin.cshtml
@@ -58,14 +58,32 @@
 <link href="~/assets/css/tables/table-basic.css" rel="stylesheet" type="text/css" />
 <link href="~/assets/css/users/user-profile.css" rel="stylesheet" type="text/css" />
 <link href="~/assets/css/structure.css" rel="stylesheet" />
+
+@using (Html.BeginForm("TreeForAdmin", "AdminReports", FormMethod.Post, new { @id = "form1" }))
+{
 <div class="container-fluid">
     <div class="row layout-top-spacing" style="justify-content:center">
         <div class="col-xl-12 col-lg-12 col-md-5 col-sm-12 layout-top-spacing">
-            <a class="btn btn-primary" href="/User/Tree">Refresh</a>
+            <a class="btn btn-primary" href="/AdminReports/TreeForAdmin">Refresh</a>
             <br /><br />
             <div class="user-profile layout-spacing">
 
                 <div class="widget-content widget-content-area widget-orange">
+                    <div class="row">
+                        <div class="col-lg-3">
+                            <div class="form-group">
+                                <label> LoginId </label>
+                                @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control" })
+                            </div>
+                        </div>
+                        <div class="col-lg-3" style="margin-top:15px;">
+                            <div class="form-group">
+                                <br />
+                                <input type="submit" id="btnSearch" class="btn btn-success pull-left" name="Search" value="Search" />
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="row">
                         <div class="col-lg-3">
                             @*<div class="d-flex justify-content-between">
@@ -219,7 +237,7 @@
                                 <div class="statbox widget box box-shadow">
                                     <div class="widget-content widget-content-area">
                                         <div class="icon-svg">
-                                            <center><a href="/User/Tree?LoginId=@item.LoginId&Id=@item.PK_UserId"><img class="level-img" src="@item.ProfilePic" height="50" width="50" style="border:5px solid @item.Color" /></a></center>
+                                            <center><a href="/AdminReports/TreeForAdmin?LoginId=@item.LoginId&Id=@item.PK_UserId"><img class="level-img" src="@item.ProfilePic" height="50" width="50" style="border:5px solid @item.Color" /></a></center>
                                         </div>
                                         <p class="text-center">@item.MemberName</p>
                                         <p class="text-center">@item.LoginId</p>
@@ -236,7 +254,7 @@
         </div>
     </div>
 </div>
-
+}
 <script>
     function GetTreeMembers(Level) {
         var cl = "";
@@ -251,7 +269,7 @@
                     if (data.lstMember != null) {
                         for (var i = 0; i < data.lstMember.length; i++) {
 
-                            $("#divMember").append('<div id="card_1" class="col-lg-3 layout-spacing"><div class="statbox widget box box-shadow"><div class="widget-content widget-content-area"><div class="icon-svg"><center><a href="/User/Tree?LoginId=' + data.lstMember[i].LoginId + '&Id=' + data.lstMember[i].PK_UserId + '"><img class="level-img" src="' + data.lstMember[i].ProfilePic + '" height="50" width="50" style="border:5px solid ' + data.lstMember[i].Color + '"/></a></center></div><p class="text-center">' + data.lstMember[i].MemberName + '</p><p class="text-center">' + data.lstMember[i].LoginId + '</p><p class="text-center">Sponsor- ' + data.lstMember[i].SponsorName + ' at Level : ' + data.lstMember[i].Level + '</p><p class="text-center">Self BV : ' + data.lstMember[i].SelfBV + '</p><p class="text-center">Team BV : ' + data.lstMember[i].TeamBV + '</p></div></div></div>')
+                            $("#divMember").append('<div id="card_1" class="col-lg-3 layout-spacing"><div class="statbox widget box box-shadow"><div class="widget-content widget-content-area"><div class="icon-svg"><center><a href="/AdminReports/TreeForAdmin?LoginId=' + data.lstMember[i].LoginId + '&Id=' + data.lstMember[i].PK_UserId + '"><img class="level-img" src="' + data.lstMember[i].ProfilePic + '" height="50" width="50" style="border:5px solid ' + data.lstMember[i].Color + '"/></a></center></div><p class="text-center">' + data.lstMember[i].MemberName + '</p><p class="text-center">' + data.lstMember[i].LoginId + '</p><p class="text-center">Sponsor- ' + data.lstMember[i].SponsorName + ' at Level : ' + data.lstMember[i].Level + '</p><p class="text-center">Self BV : ' + data.lstMember[i].SelfBV + '</p><p class="text-center">Team BV : ' + data.lstMember[i].TeamBV + '</p></div></div></div>')
                         }
                     }
                 }
